[gd_scene load_steps=2 format=3 uid="uid://cfcnos727lx0h"]

[ext_resource type="Script" uid="uid://p1w1t2r18bm3" path="res://src/Scripts/UI/EventEncounterObj.gd" id="1_spi4o"]

[node name="EventEncounterObj" type="PanelContainer"]
custom_minimum_size = Vector2(700, 440)
offset_right = 700.0
offset_bottom = 440.0
script = ExtResource("1_spi4o")

[node name="Organizer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Organizer"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="Organizer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
current_tab = 0
tab_count = 3
tab_0/title = "General"
tab_1/title = "Options"
tab_2/title = "Endings"

[node name="CloseButton" type="Button" parent="Organizer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
text = "X
"

[node name="MainScreen" type="VBoxContainer" parent="Organizer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonHolder" type="HBoxContainer" parent="Organizer/MainScreen"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddDialogueButton" type="Button" parent="Organizer/MainScreen/ButtonHolder"]
layout_mode = 2
size_flags_horizontal = 0
text = "Add dialogue"

[node name="OpenOptionsButton" type="Button" parent="Organizer/MainScreen/ButtonHolder"]
layout_mode = 2
size_flags_horizontal = 0
text = "Show encounter options"

[node name="DialogueLabel" type="Label" parent="Organizer/MainScreen"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
text = "Dialogue data"

[node name="Scroll" type="ScrollContainer" parent="Organizer/MainScreen"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.75

[node name="DialogueList" type="HBoxContainer" parent="Organizer/MainScreen/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EligibleFromPool" type="CheckButton" parent="Organizer/MainScreen"]
layout_mode = 2
text = "Eligible from event pool"

[node name="OptionContainer" type="VBoxContainer" parent="Organizer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="AddOptionButton" type="Button" parent="Organizer/OptionContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Add Option"

[node name="OptLabel" type="Label" parent="Organizer/OptionContainer"]
layout_mode = 2
text = "Option List"

[node name="OptScroll" type="ScrollContainer" parent="Organizer/OptionContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OptList" type="HBoxContainer" parent="Organizer/OptionContainer/OptScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndingScreen" type="VBoxContainer" parent="Organizer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="Organizer/EndingScreen"]
layout_mode = 2
size_flags_horizontal = 0
text = "Add ending"

[node name="Scroll" type="ScrollContainer" parent="Organizer/EndingScreen"]
layout_mode = 2
size_flags_vertical = 3

[node name="Endings" type="HBoxContainer" parent="Organizer/EndingScreen/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="tab_changed" from="Organizer/HBoxContainer/TabBar" to="." method="SwitchTab"]
[connection signal="button_up" from="Organizer/HBoxContainer/CloseButton" to="." method="OnClose"]
[connection signal="button_up" from="Organizer/MainScreen/ButtonHolder/AddDialogueButton" to="." method="AddDialogue"]
[connection signal="button_up" from="Organizer/MainScreen/ButtonHolder/OpenOptionsButton" to="." method="OpenOptionsTab"]
[connection signal="button_up" from="Organizer/OptionContainer/AddOptionButton" to="." method="CreateOptionHolder"]
[connection signal="button_up" from="Organizer/EndingScreen/Button" to="." method="AddEnding"]
